Added working swagger docs

--- a/swagger/index.html
+++ b/swagger/index.html
@@ -18,7 +18,7 @@
   <script>
     window.onload = () => {
       window.ui = SwaggerUIBundle({
-        url: 'https://substreams-erc20-api-production.up.railway.app/openapi',
+        url: '/openapi',
         dom_id: '#swagger-ui',
         presets: [
           SwaggerUIBundle.presets.apis,
